kafka/kafka-schema-registry-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: datahub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
        - name: schema-registry
          image: confluentinc/cp-schema-registry:7.4.1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 200m
              memory: 1Gi
            limits:
              cpu: "500m"
              memory: 1400Mi
          ports:
            - containerPort: 8081
            - containerPort: 30092
          livenessProbe:
            exec:
              command:
                - "nc"
                - "-z"
                - "schema-registry"
                - "8081"
            initialDelaySeconds: 60
            periodSeconds: 1
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - "nc"
                - "-z"
                - "schema-registry"
                - "8081"
            initialDelaySeconds: 60
            periodSeconds: 1
            failureThreshold: 3
            timeoutSeconds: 5            
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: datahub
spec:
  selector:
    app: schema-registry
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: external
      protocol: TCP
      port: 30092
      targetPort: 30092
