kafka/kafka-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: kafka
  name: kafka
  namespace: datahub
spec:
  serviceName: kafka
  replicas: 3  # Increased to 3 brokers
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        network/kafka-network: "true"
        app: kafka
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      enableServiceLinks: false
      terminationGracePeriodSeconds: 300
      containers:
      - name: kafka
        imagePullPolicy: IfNotPresent
        image: confluentinc/cp-kafka:7.8.0
        ports:
          - containerPort: 29092
          - containerPort: 9092
        command:
          - "sh"
          - "-c"
          - |
            export KAFKA_BROKER_ID=$(echo ${POD_NAME##*-})
            exec /etc/confluent/docker/run
        volumeMounts:
          - mountPath: /var/lib/kafka
            name: kafka-data
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        storageClassName: sc-local
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: datahub
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: internal
      port: 29092
      targetPort: 29092
    - name: external
      port: 9092
      targetPort: 9092
