kafka/schema-registry-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: schema-registry
  namespace: datahub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  serviceName: schema-registry
  template:
    metadata:
      labels:
        network/kafka-network: "true"
        app: schema-registry
    spec:
      enableServiceLinks: false
      restartPolicy: Always
      containers:
        - name: schema-registry
          image: confluentinc/cp-schema-registry:7.8.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: "500m"
              memory: 512Mi
          ports:
            - containerPort: 8081
            - containerPort: 30092
          livenessProbe:
            httpGet:
              path: /subjects
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /subjects
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: datahub
spec:
  selector:
    app: schema-registry
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: external
      protocol: TCP
      port: 30092
      targetPort: 30092
