kafka/zookeeper-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    service: zookeeper
  name: zookeeper
  namespace: datahub
spec:
  serviceName: zookeeper
  replicas: 1
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      service: zookeeper
  template:
    metadata:
      labels:
        #network/kafka-network: "true" # Only If you are using Network Policy else comment this line while deploymment
        service: zookeeper
    spec:
      securityContext:
        fsGroup: 1000
      enableServiceLinks: false
      containers:
        - image: confluentinc/cp-zookeeper:7.2.1
          imagePullPolicy: Always
          name: zookeeper
          ports:
            - containerPort: 2181
              name: client
          resources:
            limits:
              cpu: "500m"
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 100Mi
          volumeMounts:
            - mountPath: /var/lib/zookeeper/data
              name: zookeeper-data
            - mountPath: /var/lib/zookeeper/log
              name: zookeeper-log
      hostname: zookeeper
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: zookeeper-data
        namespace: datahub
      spec:
        storageClassName: sc-local
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
    - metadata:
        name: zookeeper-log
        namespace: datahub
      spec:
        storageClassName: sc-local
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: zookeeper
  name: zookeeper
  namespace: datahub
spec:
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
  selector:
    service: zookeeper
